# ktop

./: .gitignore  README  README.rst
application/: pyproject.toml
application/ktop/http_application/: __init__.py  app.py  config.py
core/: pyproject.toml
core/ktop/core/: __init__.py  models.py  ports.py  services.py
infrastructure/: pyproject.toml
infrastructure/ktop/kafka_adapter/: __init__.py  adapters.py  consumer.py  services.py
presentation/: pyproject.toml
presentation/ktop/http_adapter/: __init__.py  adapters.py  json.py  services.py
