[tool.poetry]
name = "ktop.http-application"
version = "0.1.0"
description = ""
authors = ["Arnaud Grausem <arnaud.grausem@gmail.com>"]
packages = [
	{ include = "ktop" }
]

[tool.poetry.dependencies]
python = "^3.7"
"ktop.http-adapter" =  { path = "../presentation/" }
"ktop.kafka-adapter" =  { path = "../infrastructure/" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

# [build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
