[tool.poetry]
name = "ktop.core"
version = "0.1.0"
description = ""
authors = ["Arnaud Grausem <arnaud.grausem@gmail.com>"]
packages = [
	{ include = "ktop" }
]
exclude = ["ktop/tests/*"]

[tool.poetry.dependencies]
python = "^3.7"
inject = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

# [build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
