[tool.poetry]
name = "ktop.kafka-adapter"
version = "0.1.0"
description = ""
authors = ["Arnaud Grausem <arnaud.grausem@gmail.com>"]
packages = [
	{ include = "ktop" }
]

[tool.poetry.dependencies]
python = "^3.7"
aiokafka = "^0.5.2"
"ktop.core" = { path = "../core/" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

# [build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
